--- a/index.html
+++ b/index.html
@@ -1,14 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
-    <link rel="stylesheet" href="style.scss">
-</head>
-<body>
-   <h2>portfolio</h2>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <!-- INTRODUCTION -->
+      <div class="intro">
+        <div class="welcome">
+          <div class="welcomeTextContainer">
+            <h1 class="welcomeText">Hi</h1>
+          </div>
+          <div class="welcomeImgContainer">
+            <img src="./img/person.png" alt="" class="welcomeImg" />
+          </div>
+        </div>
+        <div class="nameContainer">
+          <h2 class="name">I'm Paweł</h2>
+        </div>
+        <div class="jobTitleContainer dark">
+          <h2 class="jobTitle">a beginner</h2>
+        </div>
+        <div class="jobTitleContainer purple">
+          <h2 class="jobTitle">Web Developer</h2>
+        </div>
+      </div>
+      <!-- PROJECTS -->
+      <div class="projects">
+        <h1 class="projectsTitle">Here are some of my projects</h1>
+        <div class="project">
+          <div class="phone">
+            <img src="./img/phone.png" alt="" />
+            <div class="phoneScreen">
+              <img src="" alt="" class="phoneApp" />
+            </div>
+          </div>
+          <div class="projectDetail">
+            <h1 class="projectTitle">travelFocusApp</h1>
+            <p class="projectDesc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
+            </p>
+            <button class="projectButton">Learn More</button>
+          </div>
+        </div>
+        <div class="project">
+          <div class="laptop">
+            <img src="./img/laptop.png" alt="" />
+            <div class="laptopScreen">
+              <img src="" alt="" class="laptopApp" />
+            </div>
+          </div>
+          <div class="projectDetail">
+            <h1 class="projectTitle">travelFocusApp</h1>
+            <p class="projectDesc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
+            </p>
+            <button class="projectButton">Learn More</button>
+          </div>
+        </div>
+        <div class="project">
+          <div class="phone">
+            <img src="./img/phone.png" alt="" />
+            <div class="phoneScreen">
+              <img src="" alt="" class="phoneApp" />
+            </div>
+          </div>
+          <div class="projectDetail">
+            <h1 class="projectTitle">travelFocusApp</h1>
+            <p class="projectDesc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
+            </p>
+            <button class="projectButton">Learn More</button>
+          </div>
+        </div>
+      </div>
+      <!-- GITHUB -->
+      <div class="githubContainer">
+        <h1 class="githubTitle">Want to see my projects?</h1>
+        <div class="githubChart">
+          <div class="dates">
+            <span>Jan</span>
+            <span>Feb</span>
+            <span>Mar</span>
+            <span>Apr</span>
+            <span>May</span>
+            <span>Jun</span>
+            <span>Jul</span>
+            <span>Agu</span>
+            <span>Sep</span>
+            <span>Oct</span>
+            <span>Nov</span>
+            <span>Dec</span>
+          </div>
+          <div class="boxContainer"></div>
+          <h1 class="githubTitle">ON GITHUB</h1>
+        </div>
+        <div class="githubSm">
+          <a href="">
+            <img src="./img/github.png" alt="" />
+          </a>
+          <h2>Find Me on Github</h2>
+        </div>
+      </div>
+    </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
