add some more section styles

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
               laudantium recusandae illo veritatis possimus! laudantium
               recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
-            <button class="projectButton">Learn More</button>
+            <a
+              href="https://pawelzguda.com/"
+              class="projectButton"
+              target="_blank"
+            >Learn More</a>
+            <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
         <div class="project">
@@ -75,7 +80,12 @@
               laudantium recusandae illo veritatis possimus! laudantium
               recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
-            <button class="projectButton">Learn More</button>
+            <a
+              href="https://pawelzguda.com/"
+              class="projectButton"
+              target="_blank"
+            >Learn More</a>
+            <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
         <div class="project">
@@ -96,7 +106,12 @@
               laudantium recusandae illo veritatis possimus! laudantium
               recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
-            <button class="projectButton">Learn More</button>
+            <a
+              href="https://pawelzguda.com/"
+              class="projectButton"
+              target="_blank"
+            >Learn More</a>
+            <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
       </div>
