add script for animated icons and background

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <img src="" alt="" class="phoneApp" />
+              <img src="./img/travelFocus1.png" alt="" class="phoneApp" />
             </div>
           </div>
           <div class="projectDetail">
@@ -58,7 +58,8 @@
               href="https://pawelzguda.com/"
               class="projectButton"
               target="_blank"
-            >Learn More</a>
+              >Learn More</a
+            >
             <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
@@ -84,7 +85,8 @@
               href="https://pawelzguda.com/"
               class="projectButton"
               target="_blank"
-            >Learn More</a>
+              >Learn More</a
+            >
             <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
@@ -92,7 +94,7 @@
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <img src="" alt="" class="phoneApp" />
+              <img src="./img/travelFocus1.png" alt="" class="phoneApp" />
             </div>
           </div>
           <div class="projectDetail">
@@ -110,7 +112,8 @@
               href="https://pawelzguda.com/"
               class="projectButton"
               target="_blank"
-            >Learn More</a>
+              >Learn More</a
+            >
             <!-- <button class="projectButton">Learn More</button> -->
           </div>
         </div>
@@ -133,7 +136,7 @@
             <span>Nov</span>
             <span>Dec</span>
           </div>
-          <div class="boxContainer"></div>
+          <a href="https://github.com/tranquilopablo" class="boxContainer" target="_blank"></a>
           <h1 class="githubTitle">ON GITHUB</h1>
         </div>
         <div class="githubSm">
