add rest of window scrollY script and animations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -19,12 +19,17 @@
           <div class="welcomeTextContainer">
             <h1 class="welcomeText">Hi</h1>
           </div>
+          <img class="header-icon-one" src="./img/icons/x.svg" alt="">
+          <img class="header-icon-two" src="./img/icons/square.svg" alt="">
+          <img class="header-icon-three" src="./img/icons/square.svg" alt="">
           <div class="welcomeImgContainer">
             <img src="./img/person.png" alt="" class="welcomeImg" />
           </div>
         </div>
         <div class="nameContainer">
           <h2 class="name">I'm Paweł</h2>
+          <img class="name-icon-one" src="./img/icons/square.svg" alt="">
+          <img class="name-icon-two" src="./img/icons/square.svg" alt="">
         </div>
         <div class="jobTitleContainer dark">
           <h2 class="jobTitle">a beginner</h2>
@@ -67,7 +72,7 @@
           <div class="laptop">
             <img src="./img/laptop.png" alt="" />
             <div class="laptopScreen">
-              <img src="" alt="" class="laptopApp" />
+              <img src="./img/Adventure-Blog-App.png" alt="" class="laptopApp" />
             </div>
           </div>
           <div class="projectDetail">
