adding about section

--- a/index.html
+++ b/index.html
@@ -19,37 +19,71 @@
           <div class="welcomeTextContainer">
             <h1 class="welcomeText">Hi</h1>
           </div>
-          <img class="header-icon-one" src="./img/icons/x.svg" alt="">
-          <img class="header-icon-two" src="./img/icons/square.svg" alt="">
-          <img class="header-icon-three" src="./img/icons/square.svg" alt="">
+          <img class="header-icon-one" src="./img/icons/x.svg" alt="" />
+          <img class="header-icon-two" src="./img/icons/square.svg" alt="" />
+          <img class="header-icon-three" src="./img/icons/square.svg" alt="" />
           <div class="welcomeImgContainer">
             <img src="./img/person.png" alt="" class="welcomeImg" />
           </div>
         </div>
         <div class="nameContainer">
           <h2 class="name">I'm Paweł</h2>
-          <img class="name-icon-one" src="./img/icons/square.svg" alt="">
-          <img class="name-icon-two" src="./img/icons/square.svg" alt="">
+          <img class="name-icon-one" src="./img/icons/square.svg" alt="" />
+          <img class="name-icon-two" src="./img/icons/square.svg" alt="" />
         </div>
         <div class="jobTitleContainer dark">
-          <h2 class="jobTitle">a beginner</h2>
+          <h2 class="jobTitle">a self-taught</h2>
         </div>
         <div class="jobTitleContainer purple">
           <h2 class="jobTitle">Web Developer</h2>
         </div>
       </div>
+
+      <!-- ABOUT AND SKILLS -->
+      <div class="about-wrapper">
+        <div class="about">
+          <div class="about-img"><img src="./img/ja.jpg" alt="" /></div>
+          <h3>Hello there!</h3>
+          <p class="about-text">
+            My name is <span>Paweł Zguda</span>. I started my journey with programming in
+            mid-2021. Systematic learning has allowed me to feel more confident
+            with each passing day, but I still have the desire to learn more
+            about the technologies mentioned and to learn more about others like
+            Typescript, Next and the backend environment. Although it is the
+            frontend side of web development that gives me the most pleasure.
+            Below you can see a selection of projects that allowed me to feel
+            more confident in the skills I obtained, and gather more new
+            knowledge.
+          </p>
+        </div>
+        <div class="skills">
+          <p>Some technologies that I'm familiar to:</p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SCSS/SASS</li>
+            <li>Javascript -ES6+</li>
+            <li>React</li>
+            <li>* Node</li>
+            <li>* Express</li>
+            <li>Git</li>
+          </ul>
+          <p>* - Basic knowledge or rarely used</p>
+        </div>
+      </div>
+
       <!-- PROJECTS -->
       <div class="projects">
-        <h1 class="projectsTitle">Here are some of my projects</h1>
+        <h2 class="projectsTitle">Here are some of my projects</h2>
         <div class="project">
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <img src="./img/travelFocus1.png" alt="" class="phoneApp" />
+              <img src="./img/travelFocusApp.png" alt="" class="phoneApp" />
             </div>
           </div>
           <div class="projectDetail">
-            <h1 class="projectTitle">travelFocusApp</h1>
+            <h2 class="projectTitle">travelFocusApp</h2>
             <p class="projectDesc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
               repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
@@ -72,11 +106,15 @@
           <div class="laptop">
             <img src="./img/laptop.png" alt="" />
             <div class="laptopScreen">
-              <img src="./img/Adventure-Blog-App.png" alt="" class="laptopApp" />
+              <img
+                src="./img/Adventure-Blog-App.png"
+                alt=""
+                class="laptopApp"
+              />
             </div>
           </div>
           <div class="projectDetail">
-            <h1 class="projectTitle">travelFocusApp</h1>
+            <h2 class="projectTitle">travelFocusApp</h2>
             <p class="projectDesc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
               repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
@@ -99,11 +137,11 @@
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <img src="./img/travelFocus1.png" alt="" class="phoneApp" />
+              <img src="./img/travelFocusApp.png" alt="" class="phoneApp" />
             </div>
           </div>
           <div class="projectDetail">
-            <h1 class="projectTitle">travelFocusApp</h1>
+            <h2 class="projectTitle">travelFocusApp</h2>
             <p class="projectDesc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
               repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
@@ -141,7 +179,11 @@
             <span>Nov</span>
             <span>Dec</span>
           </div>
-          <a href="https://github.com/tranquilopablo" class="boxContainer" target="_blank"></a>
+          <a
+            href="https://github.com/tranquilopablo"
+            class="boxContainer"
+            target="_blank"
+          ></a>
           <h1 class="githubTitle">ON GITHUB</h1>
         </div>
         <div class="githubSm">
@@ -152,6 +194,25 @@
         </div>
       </div>
     </div>
+    <footer class="footer-wrapper">
+      <div class="footer-box">
+        <h3 class="contact-box"><span>Contact</span></h3>
+        <p>Email: <span>zgudapawel@gmail.com</span></p>
+        <p>
+          <a href="https://github.com/tranquilopablo" target="_blank">GitHub</a>
+        </p>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/pawe%C5%82-zguda-51105595/"
+            target="_blank"
+            >LinkedIn</a
+          >
+        </p>
+        <div class="copyright">
+          <p>© <span class="year"></span> Paweł Zguda</p>
+        </div>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
