--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             others like Typescript, Next and the backend environment. Although
             it is the frontend side of web development that gives me the most
             pleasure. Below you can see a selection of projects that allowed me
-            to feel more confident in the skills I obtained, and gather more new
+            to feel more comfortable in the skills I obtained and gather more new
             knowledge.
           </p>
         </section>
