add go to top icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div id="top" class="container">
       <!-- INTRODUCTION -->
       <header>
         <section class="welcome">
@@ -69,8 +69,8 @@
             others like Typescript, Next and the backend environment. Although
             it is the frontend side of web development that gives me the most
             pleasure. Below you can see a selection of projects that allowed me
-            to feel more comfortable in the skills I obtained and gather more new
-            knowledge.
+            to feel more comfortable in the skills I obtained and gather more
+            new knowledge.
           </p>
         </section>
         <section class="skills">
@@ -233,6 +233,9 @@
         </p>
         <div class="footer__copyright">
           <p>© <span class="footer__copyright-year"></span> Paweł Zguda</p>
+        </div>
+        <div class="footer__go-up">
+          <a href="#top"><i class="far fa-arrow-alt-circle-up"></i></a>
         </div>
       </div>
     </footer>
