update scroll to top

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
-    <link rel="stylesheet" href="minif/main.min.css" />
+    <link rel="stylesheet" href="./minif/main.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div id="top" class="container">
+    <div class="container">
       <!-- INTRODUCTION -->
       <header>
         <section class="welcome">
@@ -235,7 +235,9 @@
           <p>© <span class="footer__copyright-year"></span> Paweł Zguda</p>
         </div>
         <div class="footer__go-up">
-          <a href="#top"><i class="far fa-arrow-alt-circle-up"></i></a>
+          <div class="scroll-top">
+            <i class="far fa-arrow-alt-circle-up"></i>
+          </div>
         </div>
       </div>
     </footer>
