add another project into list

--- a/index.html
+++ b/index.html
@@ -156,25 +156,22 @@
             <img src="./img/phone.png" alt="" />
             <div class="project__phone-screen">
               <img
-                src="./img/travelFocusApp.png"
+                src="./img/Recipe-App.jpg"
                 alt=""
                 class="project__phone-app"
               />
             </div>
           </div>
           <div class="project__detail">
-            <h2 class="project__title">travelFocusApp</h2>
+            <h2 class="project__title">tastyFood</h2>
             <p class="project__desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
-              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
-              veritatis possimus! Accusamus repudiandae quia natus et iste earum
-              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
-              laudantium recusandae illo veritatis possimus! laudantium
-              recusandae illo veritatis possimus! recusandae illo veritatis.
+              A simple React application in which the user can search for a meal
+              for themselves via a search box, or select one given on the
+              homepage. The main purpose of writing the app was to use an
+              external API and work with the data obtained through it.
             </p>
             <a
-              href="https://github.com/tranquilopablo/adventure_blog_app"
+              href="https://github.com/tranquilopablo/tastyFood"
               class="project__button"
               target="_blank"
               >Learn More</a
