update styles for mobile landscape view

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             My name is <span>Paweł Zguda</span>. I started my journey with
             programming in mid-2021. Systematic learning has allowed me to feel
             more confident with each passing day, but I still have the desire to
-            learn more about the technologies mentioned and to learn more about
-            others like Typescript, Next and the backend environment. Although
-            it is the frontend side of web development that gives me the most
-            pleasure. Below you can see a selection of projects that allowed me
-            to feel more comfortable in the skills I obtained and gather more
-            new knowledge.
+            learn more about the technologies mentioned and to expand my tech
+            stack about others like Next.js and the backend environment.
+            Although it is the frontend side of web development that gives me
+            the most pleasure. Below you can see a selection of projects that
+            allowed me to feel more comfortable in the skills I obtained and
+            gather more new knowledge.
           </p>
         </section>
         <section class="skills">
@@ -86,6 +86,7 @@
             <li><i class="fa fa-check" aria-hidden="true"></i>* Node</li>
             <li><i class="fa fa-check" aria-hidden="true"></i>* Express</li>
             <li><i class="fa fa-check" aria-hidden="true"></i>Git</li>
+            <li><i class="fa fa-check" aria-hidden="true"></i>* Typescript</li>
           </ul>
           <p class="skills__notice">* - Basic knowledge or rarely used</p>
         </section>
