--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         </section>
         <section class="name">
           <h2 class="name__me">I'm Paweł</h2>
-
           <img class="name__icon-one" src="./img/icons/square.svg" alt="" />
           <img class="name__icon-two" src="./img/icons/square.svg" alt="" />
         </section>
@@ -67,9 +66,9 @@
             learn more about the technologies mentioned and to expand my tech
             stack about others like Next.js and the backend environment.
             Although it is the frontend side of web development that gives me
-            the most pleasure. Below you can see a selection of projects that
-            allowed me to feel more comfortable in the skills I obtained and
-            gather more new knowledge.
+            the most pleasure and is mainly what I would like to focus on. Below
+            you can see a selection of projects that allowed me to feel more
+            comfortable in the skills I obtained and gather more new knowledge.
           </p>
         </section>
         <section class="skills">
@@ -107,12 +106,12 @@
           <div class="project__detail">
             <h2 class="project__title">travelFocusApp</h2>
             <p class="project__desc">
-              An app written in React that allows you to add, delete and edit
-              places to visit and uncheck them to the accomplished list. Each
-              place is integrated with google maps, where you can quickly get an
-              overview of the location. The application uses the Node
-              environment using Express and MongoDB. Photos are uploaded to the
-              AWS S3 service.
+              A fullstack app written in React that allows logged-in users to
+              add, delete and edit places to visit and uncheck them to the
+              accomplished list. Each place is integrated with google maps,
+              where you can quickly get an overview of the location. The
+              application uses the Node environment using Express and MongoDB.
+              Photos are uploaded to the AWS S3 service.
             </p>
             <a
               href="https://github.com/tranquilopablo/travelFocusApp"
@@ -165,9 +164,9 @@
             <h2 class="project__title">tastyFood</h2>
             <p class="project__desc">
               A simple React application in which the user can search for a meal
-              for themselves via a search box, or select one given on the
-              homepage. The main purpose of writing the app was to use an
-              external API and work with the data obtained through it.
+              via a search box, or select one given on the homepage. The main
+              purpose of writing the app was to use an external API and work
+              with the data obtained through it.
             </p>
             <a
               href="https://github.com/tranquilopablo/tastyFood"
